# proxy-server

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/agents/: cpp_specialist.agent.md
docs/: BUILDING_THE_PROJECT.md  IDEAS.md  MSVC.md
include/proxy/: http_parser.hpp  platform.hpp  socket_utils.hpp
src/: http_parser.cpp  main.cpp  socket_utils.cpp
